<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_app_version">App Version: %1$s</string>
    <string name="account_login_info_had_time_out">Your account has expired, please log in again</string>
    <string name="account_login_on_another_phone">Your account has been logged in on another phone, please log in again</string>
    <string name="action_open">Sure</string>
    <string name="activate_device">Activate the radio</string>
    <string name="activate_device_checkbox_text">"I fully understood this statement, and promise that I possess all qualifications required. I will be responsible for consequences caused by activating the 'Amateur Channel', 'Custom Channel' and 'Repeater List'."</string>
    <string name="activate_device_describe">To use all CH-modes</string>
    <string name="button_free_cal_describing">Call without having to press the PTT button</string>
    <string name="button_free_call_text">Hands-Free Call</string>
    <string name="channel_setting">Channel Settings</string>
    <string name="common_cancel">Cancel</string>
    <string name="device_setting_device_name_describe">Change radio name</string>
    <string name="device_setting_text">Walkie-Talkie Settings</string>
    <string name="discovery_center">News center</string>
    <string name="emission_frequency">Transmission frequency</string>
    <string name="feedback">Feedback</string>
    <string name="lite_config_title">Configuration File</string>
    <string name="lite_device_unique_id">"Walkie-talkie's unique factory code"</string>
    <string name="lite_empty_channel_detail">This channel is currently empty, please edit it first.</string>
    <string name="lite_empty_channel_title">Please edit the channel first</string>
    <string name="lite_item_batch_config_detail">Quickly synchronize the same configuration with multiple walkie-talkies.</string>
    <string name="lite_item_batch_config_title">Batch Configuration</string>
    <string name="lite_item_config_detail">Import new file to the walkie-talkie</string>
    <string name="lite_item_detail_about">View User Agreement and Privacy Policy</string>
    <string name="lite_item_other_detail">Settings for other functions</string>
    <string name="lite_item_other_title">Additional Settings</string>
    <string name="lite_item_set_voice_detail">Enable/disable notification sound &amp; set voice broadcast language</string>
    <string name="lite_item_set_voice_title">Notification Sound</string>
    <string name="lite_item_upgrade_detail">Check new firmware version</string>
    <string name="lite_item_upgrade_title">Firmware Update</string>
    <string name="lite_item_wide_narrow_title">Set communication bandwidth</string>
    <string name="lite_unknown_channel">Unknown channel</string>
    <string name="noise_level_detail">Set the Threshold for Receiving Signals</string>
    <string name="noise_level_text">Squelch Level</string>
    <string name="offlinemap_download">Download Offline Maps</string>
    <string name="profile">Profile</string>
    <string name="radio_exam">Amateur Radio Exam</string>
    <string name="receive_frequency">Receiving frequency</string>
    <string name="seal_bt_ear_help_section1_content1">Please cancel the pairing with the Bluetooth headset in Settings > Bluetooth of your mobile phone first and then use the app’s Bluetooth Connection Assistant feature to connect.</string>
    <string name="seal_bt_ear_help_section1_content2">For some headsets, they are able to be discovered and connected only in pairing mode after canceling the pairing with your mobile phone. Please refer to the user manual for how to enter the pairing mode.</string>
    <string name="seal_bt_ear_help_section1_title">Have you connected the Bluetooth headset to your mobile phone?</string>
    <string name="seal_bt_ear_help_section2_content1">For most Bluetooth headsets, they will enter the pairing mode by pressing and holding the power button until the indicator light flashes.</string>
    <string name="seal_bt_ear_help_section2_content2">The way to enter pairing mode varies on different devices. Please refer to the user manual for details.</string>
    <string name="seal_bt_ear_help_section2_title">Is your Bluetooth headset in the pairing mode?</string>
    <string name="seal_bt_ear_help_section3_content1">The Bluetooth headset cannot be discovered and connected if the Bluetooth feature of the walkie-talkie is not activated. Please refer to the walkie-talkie user manual for how to activate its Bluetooth feature.</string>
    <string name="seal_bt_ear_help_section3_title">Have you activated the walkie-talkie?</string>
    <string name="setting">Setting</string>
    <string name="setting_my_info_sex">Gender</string>
    <string name="setting_product_instructions">Product Manual</string>
    <string name="setting_use_help">FAQ</string>
    <string name="setting_user_info_gender_female">Female</string>
    <string name="setting_user_info_gender_male">Male</string>
    <string name="stop_trans_if_busy_detail">Prohibit transmitting when current channel is occupied</string>
    <string name="stop_trans_if_busy_text">Busy Channel Lock-out</string>
    <string name="unbind">Unpair</string>
    <string name="wide_narrow_band_text">Wideband/Narrowband</string>
</resources>