<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/title_bar_layout" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="37.0dip" android:paddingEnd="40.0dip">
            <com.ifengyu.intercom.ui.widget.view.TextViewDrawable android:textSize="16.0sp" android:textColor="@color/black" android:gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/seal_bt_ear_help_section1_title" android:drawablePadding="10.0dip" android:drawableStart="@drawable/bluetooth_icon_circle" app:isAliganCenter="false" />
            <com.ifengyu.intercom.ui.widget.view.TextViewDrawable android:textSize="13.0sp" android:textColor="@color/black60" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/seal_bt_ear_help_section1_content1" android:drawablePadding="10.0dip" android:drawableStart="@drawable/help_icon_cilcle_white" app:isAliganCenter="false" />
            <com.ifengyu.intercom.ui.widget.view.TextViewDrawable android:textSize="13.0sp" android:textColor="@color/black60" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/seal_bt_ear_help_section1_content2" android:drawablePadding="10.0dip" android:drawableStart="@drawable/help_icon_cilcle_white" app:isAliganCenter="false" />
            <com.ifengyu.intercom.ui.widget.view.TextViewDrawable android:textSize="16.0sp" android:textColor="@color/black" android:gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:layout_marginBottom="15.0dip" android:text="@string/seal_bt_ear_help_section2_title" android:drawablePadding="10.0dip" android:drawableStart="@drawable/bluetooth_icon_circle" app:isAliganCenter="false" />
            <com.ifengyu.intercom.ui.widget.view.TextViewDrawable android:textSize="13.0sp" android:textColor="@color/black60" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/seal_bt_ear_help_section2_content1" android:drawablePadding="10.0dip" android:drawableStart="@drawable/help_icon_cilcle_white" app:isAliganCenter="false" />
            <com.ifengyu.intercom.ui.widget.view.TextViewDrawable android:textSize="13.0sp" android:textColor="@color/black60" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/seal_bt_ear_help_section2_content2" android:drawablePadding="10.0dip" android:drawableStart="@drawable/help_icon_cilcle_white" app:isAliganCenter="false" />
            <com.ifengyu.intercom.ui.widget.view.TextViewDrawable android:textSize="16.0sp" android:textColor="@color/black" android:gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:layout_marginBottom="15.0dip" android:text="@string/seal_bt_ear_help_section3_title" android:drawablePadding="10.0dip" android:drawableStart="@drawable/bluetooth_icon_circle" app:isAliganCenter="false" />
            <com.ifengyu.intercom.ui.widget.view.TextViewDrawable android:textSize="13.0sp" android:textColor="@color/black60" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/seal_bt_ear_help_section3_content1" android:drawablePadding="10.0dip" android:drawableStart="@drawable/help_icon_cilcle_white" app:isAliganCenter="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>